<resources>
    <string name="app_name">Cong thuc nau an</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="title_rate_me">Rate me</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_categories">Categories</string>
    <string name="title_recipes">recipes</string>
    <string name="title_toolbar_categories">Danh mục</string>
    <string name="text_example">Tron deu 3 muong canh bo voi 3 muong canh pho mai, 2 muong canh dau o liu, 1 muong canh ngo tay, 5 muong canh toi bam, 1/2 muong ca phe hung que va 1/4 muon ca phe muoi</string>
</resources>
