<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.amthuc.nauan.congthuc.ui.main.MainViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical" />

            <FrameLayout
                android:id="@+id/frame_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/linear_ads"
                android:background="@android:color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/dp_280"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/color_gray_50_200">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/layout_menu_nav_bottom"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_160"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/banhman_1" />

                <LinearLayout
                    android:id="@+id/nav_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/dp_8"
                        android:src="@drawable/ic_favorite_black_24dp"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        style="@style/drawerTextStyle"
                        android:text="@string/title_favorite" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_download"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/dp_8"
                        android:src="@drawable/ic_search_black_24dp"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        style="@style/drawerTextStyle"
                        android:text="@string/title_search" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/color_gray_50_400" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_8"
                    android:text="@string/title_categories"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sp_16" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCategoryDrawer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_menu_nav_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/color_gray_50_400" />

                <LinearLayout
                    android:id="@+id/nav_rate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/dp_8"
                        android:src="@drawable/ic_thumb_up_black_24dp"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        style="@style/drawerTextStyle"
                        android:text="@string/title_rate_me" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_report_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/dp_8"
                        android:src="@drawable/ic_feedback_black_24dp"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        style="@style/drawerTextStyle"
                        android:text="@string/title_feedback" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
